# cpp_day_0

./: .clang-format  subject.md
ex00/: CMakeLists.txt  Makefile  compile_commands.json  megaphone  megaphone.cpp  src
ex00/.bak/: Makefile.bak
ex00/.cache/clangd/index/: megaphone.cpp.DBDE01C7A9567294.idx  test_megaphone.cpp.83F0637D6B707BAE.idx  utils.cpp.29F9A3847091D16B.idx  utils.hpp.FFD77FE393541F04.idx
ex00/src/: megaphone.cpp  utils.cpp  utils.hpp
ex00/test/: test_megaphone.cpp
ex00/tests/: test_megaphone.cpp
ex01/: Makefile  \  compile_commands.json  main.cpp
ex01/.bak/: Makefile.bak
ex01/src/: Contact.class.cpp  Contact.class.hpp  PhoneBook.class.cpp  PhoneBook.class.hpp  PhoneBook.class.private.cpp  PhoneBook.class.public.cpp
ex01/tests/: test_myPhoneBook.cpp
ex02/: Account.cpp  Makefile  test.sh  tests.cpp
ex02/src/: Account.cpp  Account.hpp
ultra_diff_review/: diff.md  diff_anthropic_claude-3-7-sonnet-20250219_4k.md  diff_gemini_gemini-2.0-flash-thinking-exp.md  diff_openai_o3-mini.md  fusion_ultra_diff_review.md
